--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -10,7 +10,7 @@
         <string>com.plexapp.plugins.masteranime</string>
         <key>URLPatterns</key>
         <array>
-          <string>https://www.masterani.me/.+</string>
+          <string>http://www.masterani.me/.+</string>
         </array>
       </dict>
     </dict>
